Prevent post TOC from being covered

--- a/assets/css/jekyll-theme-chirpy.scss
+++ b/assets/css/jekyll-theme-chirpy.scss
@@ -171,6 +171,47 @@ html[data-mode='dark'] #sidebar nav .nav-link {
   z-index: 1;
 }
 
+@media (min-width: 992px) {
+  html[data-mode='dark'] body.post-page #sidebar nav.flex-column {
+    right: 0.45rem;
+    width: 3rem !important;
+    max-width: 3rem;
+  }
+
+  html[data-mode='dark'] body.post-page #sidebar nav .nav-link {
+    align-items: center;
+    border-left-width: 1px;
+    height: 2.85rem;
+    justify-content: center;
+    margin-left: auto;
+    padding-left: 0;
+    padding-right: 0;
+    width: 2.85rem;
+  }
+
+  html[data-mode='dark'] body.post-page #sidebar nav .nav-link span {
+    border: 0;
+    clip: rect(0, 0, 0, 0);
+    height: 1px;
+    margin: -1px;
+    overflow: hidden;
+    padding: 0;
+    position: absolute;
+    white-space: nowrap;
+    width: 1px;
+  }
+
+  html[data-mode='dark'] body.post-page #sidebar nav .nav-link i {
+    margin: 0;
+  }
+
+  html[data-mode='dark'] body.post-page #toc-wrapper {
+    max-height: calc(100vh - 1.5rem);
+    overflow-y: auto;
+    z-index: 40;
+  }
+}
+
 html[data-mode='dark'] #sidebar nav .nav-link i {
   color: rgba(83, 243, 195, 0.72);
 }
